# prompter

./: PRIVACY.md  README.md  RELEASING.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: check-versions.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  entitlements.mac.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: README.md
src-tauri/permissions/autogenerated/: acknowledge_quick_capture_outcomes.toml  control_provider_navigation.toml  get_app_lifecycle_status.toml  get_provider_navigation_state.toml  get_quick_capture_status.toml  list_quick_capture_outcomes.toml  open_quick_capture_settings.toml  place_prompt.toml  read_clipboard_text.toml  request_quick_capture_permission.toml  resize_provider_webview.toml  retry_quick_capture_registration.toml  set_launch_at_login.toml  set_provider_visibility.toml  show_provider_webview.toml
src-tauri/src/: app_shortcuts.rs  capture.rs  command_manifest.rs  lib.rs  main.rs  prompt.rs  settings.rs
src-tauri/src/app_lifecycle/: mod.rs  tray.rs
src-tauri/src/platform/: macos.rs  mod.rs  webview_navigation.rs
src-tauri/src/provider/: bridge.rs  commands.rs  config.rs  error.rs  fill_prompt.js  geometry.rs  mod.rs  navigation.rs
src-tauri/src/quick_capture/: macos.rs  mod.rs  model.rs  service.rs
src/features/instructions/: InstructionEditorDialog.test.tsx  InstructionEditorDialog.tsx  InstructionSidebar.test.tsx  InstructionSidebar.tsx  collection.test.ts  collection.ts  defaults.ts  index.ts  instructions.css  model.ts  storage.test.ts  storage.ts  store.test.ts  store.ts  useInstructionLibrary.ts
src/features/lifecycle/: gateway.test.ts  gateway.ts  index.ts  model.test.ts  model.ts  store.test.ts  store.ts  useAppLifecycle.ts
src/features/providers/: PromptDock.tsx  ProviderBrowser.test.tsx  ProviderBrowser.tsx  ProviderNavigationCapsule.test.tsx  ProviderNavigationCapsule.tsx  fillPrompt.test.ts  gateway.test.ts  gateway.ts  index.ts  model.ts  placement.test.ts  placement.ts  prompt.test.ts  prompt.ts  providers.css  storage.ts  store.test.ts  store.ts  useClipboardCapture.ts  useEmbeddedProvider.test.tsx  useEmbeddedProvider.ts  usePromptPlacement.test.tsx  usePromptPlacement.ts  useProviderNavigation.test.tsx  useProviderNavigation.ts
src/features/quickCapture/: gateway.test.ts  gateway.ts  index.ts  model.test.ts  model.ts  store.test.ts  store.ts  useQuickCapture.ts
src/features/settings/: SettingsDialog.tsx  dialogs.css  index.ts  store.ts  useTheme.ts
src/shared/: ErrorBoundary.tsx  Icon.tsx  ModalBackdrop.tsx  StatusBar.tsx  bootstrap.test.ts  bootstrap.ts  contracts.ts  ids.test.ts  ids.ts  notices.test.ts  notices.ts  schemas.ts  settingsGateway.test.ts  settingsGateway.ts  useAppShortcuts.test.tsx  useAppShortcuts.ts
src/styles/: foundation.css  index.css  theme.css
