[package]
name = "prompter"
version = "0.1.0"
description = "A fast, local-first AI prompt rewriting companion"
authors = ["Prompter"]
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prompter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Pinned to a tested minor because the multi-webview `unstable` feature has no
# stability guarantee across Tauri releases.
tauri = { version = "~2.11.0", features = ["unstable", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
core-graphics = "0.25"
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "libc", "NSPasteboard", "NSPasteboardItem", "NSResponder", "NSRunningApplication", "NSWindow", "NSWorkspace"] }
objc2-core-graphics = { version = "0.3", default-features = false, features = ["CGEvent", "CGEventSource", "CGEventTypes"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSArray", "NSData", "NSDictionary", "NSKeyValueObserving", "NSObject", "NSString", "NSURL"] }
objc2-web-kit = { version = "0.3", default-features = false, features = ["std", "objc2-app-kit", "WKNavigation", "WKWebView"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["sync", "time"] }
